--- a/_posts/2023-11-27-my-game.md
+++ b/_posts/2023-11-27-my-game.md
@@ -7,7 +7,7 @@ description: A animation about a koopa jump
 type: tangibles
 courses: { compsci: {week: 1} }
 ---
-
+<script>
 import pygame
 import sys
 
