--- a/_posts/2023-11-27-my-game.md
+++ b/_posts/2023-11-27-my-game.md
@@ -1,3 +1,14 @@
+toc: false
+comments: false
+layout: post
+title: Classic Snake Game
+description: A pretty advanced use of JavaScript building classic snake game using menu controls, key events, snake simulation and timers.
+type: tangibles
+courses: { compsci: {week: 2} }
+
+
+
+
 <table>
     <tr>
         <td><img src="/teacher//images/logo.png" height="60" title="Frontend" alt=""></td>
