--- a/_posts/2023-11-27-my-game.md
+++ b/_posts/2023-11-27-my-game.md
@@ -5,7 +5,7 @@ title: Classic Snake Game
 description: A pretty advanced use of JavaScript building classic snake game using menu controls, key events, snake simulation and timers.
 type: tangibles
 courses: { compsci: {week: 2} }
-
+<script>
 
 
 
