--- a/_posts/2023-11-27-my-game.md
+++ b/_posts/2023-11-27-my-game.md
@@ -5,327 +5,53 @@ title: Classic Snake Game
 description: A pretty advanced use of JavaScript building classic snake game using menu controls, key events, snake simulation and timers.
 type: tangibles
 courses: { compsci: {week: 2} }
+
 <script>
+import pygame
+import (26361786-pixel-art-illustration-basket-ball-pixelated-basket-ball-sports-basket-ball-icon-pixelated-for-the-pixel-art-game-and-icon-for-website-and-video-game-old-school-retro)
+import sys
 
+pygame.init()
 
+WIDTH, HEIGHT = 800, 600
+FPS = 60
+WHITE = (255, 255, 255)
+BALL_RADIUS = 20
 
-<table>
-    <tr>
-        <td><img src="/teacher//images/logo.png" height="60" title="Frontend" alt=""></td>
-        <td><a href="/teacher/index">Course</a></td>
-        <td><a href="/teacher/techtalk/home_style">Style-Calc</a></td>
-        <td><a href="/teacher/frontend/home_motion">Animation</a></td>
-        <td><a href="/teacher/frontend/home_table">API-Music</a></td>
-        <td><a href="/teacher/devops/cloud_database">Data-Users</a></td>
-    </tr>
-</table>
+screen = pygame.display.set_mode((WIDTH, HEIGHT))
+pygame.display.set_caption("Basketball Game")
 
-  <!--- Liquid concatentation --->
-  <!--- Liquid list variable created from file containing mario metatdata for sprite --->
- <!--- Liquid integer assignment --->
+basketball_color = (255, 165, 0)  # Orange color
+basketball_x = WIDTH // 2
+basketball_y = HEIGHT // 2
+basketball_speed = 5
 
-<!--- HTML for page contains <p> tag named "mario" and class properties for a "sprite"  -->
+clock = pygame.time.Clock()
 
-<p id="mario" class="sprite"></p>
-  
-<!--- Embedded Cascading Style Sheet (CSS) rules, defines how HTML elements look --->
-<style>
+while True:
+    for event in pygame.event.get():
+        if event.type == pygame.QUIT:
+            pygame.quit()
+            sys.exit()
 
-  /*CSS style rules for the elements id and class above...
-  */
-  .sprite {
-    height: 256px;
-    width: 256px;
-    background-image: url('/teacher/images/mario_animation.png');
-    background-repeat: no-repeat;
-  }
+    # Move the basketball
+    keys = pygame.key.get_pressed()
+    if keys[pygame.K_LEFT] and basketball_x - basketball_speed > 0:
+        basketball_x -= basketball_speed
+    if keys[pygame.K_RIGHT] and basketball_x + basketball_speed < WIDTH:
+        basketball_x += basketball_speed
+    if keys[pygame.K_UP] and basketball_y - basketball_speed > 0:
+        basketball_y -= basketball_speed
+    if keys[pygame.K_DOWN] and basketball_y + basketball_speed < HEIGHT:
+        basketball_y += basketball_speed
 
-  /*background position of sprite element
-  */
-  #mario {
-    background-position: calc( * 256 * -1px) calc( * 256* -1px);
-  }
-</style>
+    # Draw everything
+    screen.fill(WHITE)
+    pygame.draw.circle(screen, basketball_color, (basketball_x, basketball_y), BALL_RADIUS)
 
-<!--- Embedded executable code--->
+    # Update the display
+    pygame.display.flip()
+
+    # Cap the frame rate
+    clock.tick(FPS)
 <script>
-  ////////// convert yml hash to javascript key value objects /////////
-
-  var mario_metadata = {}; //key, value object
-    
-  
-  var key = "Rest"  //key
-  var values = {} //values object
-  values["row"] = 0
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "RestL"  //key
-  var values = {} //values object
-  values["row"] = 1
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "Walk"  //key
-  var values = {} //values object
-  values["row"] = 2
-  values["col"] = 0
-  values["frames"] = 8
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "Tada"  //key
-  var values = {} //values object
-  values["row"] = 2
-  values["col"] = 11
-  values["frames"] = 3
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "WalkL"  //key
-  var values = {} //values object
-  values["row"] = 3
-  values["col"] = 0
-  values["frames"] = 8
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "TadaL"  //key
-  var values = {} //values object
-  values["row"] = 3
-  values["col"] = 11
-  values["frames"] = 3
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "Run1"  //key
-  var values = {} //values object
-  values["row"] = 4
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "Run1L"  //key
-  var values = {} //values object
-  values["row"] = 5
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "Run2"  //key
-  var values = {} //values object
-  values["row"] = 6
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "Run2L"  //key
-  var values = {} //values object
-  values["row"] = 7
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "Puff"  //key
-  var values = {} //values object
-  values["row"] = 8
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "PuffL"  //key
-  var values = {} //values object
-  values["row"] = 9
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "Cheer"  //key
-  var values = {} //values object
-  values["row"] = 10
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "CheerL"  //key
-  var values = {} //values object
-  values["row"] = 11
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "Flip"  //key
-  var values = {} //values object
-  values["row"] = 12
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-    
-  
-  var key = "FlipL"  //key
-  var values = {} //values object
-  values["row"] = 13
-  values["col"] = 0
-  values["frames"] = 15
-  mario_metadata[key] = values; //key with values added
-
-  
-
-  ////////// animation control object /////////
-
-  class Mario {
-    constructor(meta_data) {
-      this.tID = null;  //capture setInterval() task ID
-      this.positionX = 0;  // current position of sprite in X direction
-      this.currentSpeed = 0;
-      this.marioElement = document.getElementById("mario"); //HTML element of sprite
-      this.pixels = 256; //pixel offset of images in the sprite, set by liquid constant
-      this.interval = 100; //animation time interval
-      this.obj = meta_data;
-      this.marioElement.style.position = "absolute";
-    }
-
-    animate(obj, speed) {
-      let frame = 0;
-      const row = obj.row * this.pixels;
-      this.currentSpeed = speed;
-
-      this.tID = setInterval(() => {
-        const col = (frame + obj.col) * this.pixels;
-        this.marioElement.style.backgroundPosition = `-${col}px -${row}px`;
-        this.marioElement.style.left = `${this.positionX}px`;
-
-        this.positionX += speed;
-        frame = (frame + 1) % obj.frames;
-
-        const viewportWidth = window.innerWidth;
-        if (this.positionX > viewportWidth - this.pixels) {
-          document.documentElement.scrollLeft = this.positionX - viewportWidth + this.pixels;
-        }
-      }, this.interval);
-    }
-
-    startWalking() {
-      this.stopAnimate();
-      this.animate(this.obj["Walk"], 3);
-    }
-
-    startRunning() {
-      this.stopAnimate();
-      this.animate(this.obj["Run1"], 6);
-    }
-
-    startPuffing() {
-      this.stopAnimate();
-      this.animate(this.obj["Puff"], 0);
-    }
-
-    startCheering() {
-      this.stopAnimate();
-      this.animate(this.obj["Cheer"], 0);
-    }
-
-    startFlipping() {
-      this.stopAnimate();
-      this.animate(this.obj["Flip"], 0);
-    }
-
-    startResting() {
-      this.stopAnimate();
-      this.animate(this.obj["Rest"], 0);
-    }
-
-    stopAnimate() {
-      clearInterval(this.tID);
-    }
-  }
-
-  const mario = new Mario(mario_metadata);
-
-  ////////// event control /////////
-
-  window.addEventListener("keydown", (event) => {
-    if (event.key === "ArrowRight") {
-      event.preventDefault();
-      if (event.repeat) {
-        mario.startCheering();
-      } else {
-        if (mario.currentSpeed === 0) {
-          mario.startWalking();
-        } else if (mario.currentSpeed === 3) {
-          mario.startRunning();
-        }
-      }
-    } else if (event.key === "ArrowLeft") {
-      event.preventDefault();
-      if (event.repeat) {
-        mario.stopAnimate();
-      } else {
-        mario.startPuffing();
-      }
-    }
-  });
-
-  //touch events that enable animations
-  window.addEventListener("touchstart", (event) => {
-    event.preventDefault(); // prevent default browser action
-    if (event.touches[0].clientX > window.innerWidth / 2) {
-      // move right
-      if (currentSpeed === 0) { // if at rest, go to walking
-        mario.startWalking();
-      } else if (currentSpeed === 3) { // if walking, go to running
-        mario.startRunning();
-      }
-    } else {
-      // move left
-      mario.startPuffing();
-    }
-  });
-
-  //stop animation on window blur
-  window.addEventListener("blur", () => {
-    mario.stopAnimate();
-  });
-
-  //start animation on window focus
-  window.addEventListener("focus", () => {
-     mario.startFlipping();
-  });
-
-  //start animation on page load or page refresh
-  document.addEventListener("DOMContentLoaded", () => {
-    // adjust sprite size for high pixel density devices
-    const scale = window.devicePixelRatio;
-    const sprite = document.querySelector(".sprite");
-    sprite.style.transform = `scale(${0.2 * scale})`;
-    mario.startResting();
-  });
-
-</script>
