--- a/_posts/2023-08-31-Snake.md
+++ b/_posts/2023-08-31-Snake.md
@@ -100,12 +100,16 @@ courses: { compsci: {week: 2} }
             <a id="new_game2" class="link-alert">new game</a>
             <br>
             <p>Speed:
+                <input id="speed0" type="radio" name="speed" value="175"/>
+                <label for="speed0">ultra-slow</label>
                 <input id="speed1" type="radio" name="speed" value="120" checked/>
                 <label for="speed1">Slow</label>
                 <input id="speed2" type="radio" name="speed" value="75"/>
                 <label for="speed2">Normal</label>
                 <input id="speed3" type="radio" name="speed" value="35"/>
                 <label for="speed3">Fast</label>
+                <input id="speed4" type="radio" name="speed" value="5"/>
+                <label for="speed4">Ultra-Fast</label>
             </p>
             <p>Wall:
                 <input id="wallon" type="radio" name="wall" value="1" checked/>
@@ -334,7 +338,7 @@ courses: { compsci: {week: 2} }
         /* Dot for Food or Snake part */
         /////////////////////////////////////////////////////////////
         let activeDot = function(x, y){
-            ctx.fillStyle = "#FFFFFF";
+            ctx.fillStyle = "#13ed4e";
             ctx.fillRect(x * BLOCK, y * BLOCK, BLOCK, BLOCK);
         }
         /* Random food placement */
