--- a/_posts/2023-08-31-Snake.md
+++ b/_posts/2023-08-31-Snake.md
@@ -374,7 +374,7 @@ courses: { compsci: {week: 2} }
         let setWall = function(wall_value){
             wall = wall_value;
             if(wall === 0){screen_snake.style.borderColor = "#606060";}
-            if(wall === 1){screen_snake.style.borderColor = "#FFFFFF";}
+            if(wall === 1){screen_snake.style.borderColor = "#00FF00";}
         }
     })();
 </script>
