--- a/_posts/2023-12-11-Collab.md
+++ b/_posts/2023-12-11-Collab.md
@@ -7,5 +7,4 @@ description: bubio collab
 type: tangibles
 courses: { compsci: {week: 2} }
 ---
-## Yayyyyy
-I posted on his Repository
+collab w nick
